--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <link rel="stylesheet" type="text/css" href="./css/reset.css">
-   <link rel="stylesheet" type="text/css" href="./css/email-box.css">
+   <link rel="stylesheet" type="text/css" href="./css/style.css">
    <script src="https://kit.fontawesome.com/db9f7000a0.js" crossorigin="anonymous"></script>
 
    <title>email me box</title>
